target/generated-sources/antlr4/uk/ac/ucl/jsh/.antlr/CallGrammarParser.java
// Generated from uk/ac/ucl/jsh/.antlr/CallGrammar.g4 by ANTLR 4.7
package uk.ac.ucl.jsh.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CallGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WHITESPACE=1, UNQUOTED=2, PIPE=3, SEMICOLON=4, INPUTREDIRECTION=5, OUTPUTREDIRECTION=6, 
		SINGLEQUOTE=7, DOUBLEQUOTE=8, BACKQUOTE=9;
	public static final int
		RULE_start = 0, RULE_arguments = 1, RULE_redirection = 2, RULE_call_type = 3, 
		RULE_argument = 4, RULE_single_quote = 5, RULE_double_quote = 6, RULE_double_quote_options = 7, 
		RULE_back_quote = 8;
	public static final String[] ruleNames = {
		"start", "arguments", "redirection", "call_type", "argument", "single_quote", 
		"double_quote", "double_quote_options", "back_quote"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, "'|'", "';'", "'<'", "'>'", "'''", "'\"'", "'`'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WHITESPACE", "UNQUOTED", "PIPE", "SEMICOLON", "INPUTREDIRECTION", 
		"OUTPUTREDIRECTION", "SINGLEQUOTE", "DOUBLEQUOTE", "BACKQUOTE"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CallGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CallGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CallGrammarParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallGrammarVisitor ) return ((CallGrammarVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(18);
			arguments();
			setState(19);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(CallGrammarParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(CallGrammarParser.WHITESPACE, i);
		}
		public List<RedirectionContext> redirection() {
			return getRuleContexts(RedirectionContext.class);
		}
		public RedirectionContext redirection(int i) {
			return getRuleContext(RedirectionContext.class,i);
		}
		public List<Call_typeContext> call_type() {
			return getRuleContexts(Call_typeContext.class);
		}
		public Call_typeContext call_type(int i) {
			return getRuleContext(Call_typeContext.class,i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallGrammarVisitor ) return ((CallGrammarVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_arguments);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(24);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WHITESPACE) {
				{
				{
				setState(21);
				match(WHITESPACE);
				}
				}
				setState(26);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(32);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INPUTREDIRECTION || _la==OUTPUTREDIRECTION) {
				{
				{
				setState(27);
				redirection();
				setState(28);
				match(WHITESPACE);
				}
				}
				setState(34);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(35);
			argument();
			setState(40);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(36);
					match(WHITESPACE);
					setState(37);
					call_type(0);
					}
					} 
				}
				setState(42);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(46);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(43);
					match(WHITESPACE);
					}
					} 
				}
				setState(48);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RedirectionContext extends ParserRuleContext {
		public TerminalNode INPUTREDIRECTION() { return getToken(CallGrammarParser.INPUTREDIRECTION, 0); }
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(CallGrammarParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(CallGrammarParser.WHITESPACE, i);
		}
		public TerminalNode OUTPUTREDIRECTION() { return getToken(CallGrammarParser.OUTPUTREDIRECTION, 0); }
		public RedirectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_redirection; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallGrammarVisitor ) return ((CallGrammarVisitor<? extends T>)visitor).visitRedirection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RedirectionContext redirection() throws RecognitionException {
		RedirectionContext _localctx = new RedirectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_redirection);
		int _la;
		try {
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INPUTREDIRECTION:
				enterOuterAlt(_localctx, 1);
				{
				setState(49);
				match(INPUTREDIRECTION);
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(50);
					match(WHITESPACE);
					}
					}
					setState(53); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WHITESPACE );
				setState(55);
				argument();
				}
				break;
			case OUTPUTREDIRECTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				match(OUTPUTREDIRECTION);
				setState(58); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(57);
					match(WHITESPACE);
					}
					}
					setState(60); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WHITESPACE );
				setState(62);
				argument();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Call_typeContext extends ParserRuleContext {
		public RedirectionContext redirection() {
			return getRuleContext(RedirectionContext.class,0);
		}
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public Call_typeContext call_type() {
			return getRuleContext(Call_typeContext.class,0);
		}
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(CallGrammarParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(CallGrammarParser.WHITESPACE, i);
		}
		public Call_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_call_type; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallGrammarVisitor ) return ((CallGrammarVisitor<? extends T>)visitor).visitCall_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Call_typeContext call_type() throws RecognitionException {
		return call_type(0);
	}

	private Call_typeContext call_type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Call_typeContext _localctx = new Call_typeContext(_ctx, _parentState);
		Call_typeContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_call_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INPUTREDIRECTION:
			case OUTPUTREDIRECTION:
				{
				setState(66);
				redirection();
				}
				break;
			case UNQUOTED:
			case SINGLEQUOTE:
			case DOUBLEQUOTE:
			case BACKQUOTE:
				{
				setState(67);
				argument();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(79);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Call_typeContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_call_type);
					setState(70);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(72); 
					_errHandler.sync(this);
					_alt = 1;
					do {
						switch (_alt) {
						case 1:
							{
							{
							setState(71);
							match(WHITESPACE);
							}
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						setState(74); 
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
					} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
					setState(76);
					arguments();
					}
					} 
				}
				setState(81);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public Token unquotedArgument;
		public Single_quoteContext singleQuoteArgument;
		public Double_quoteContext doubleQuoteArgument;
		public Back_quoteContext backQuoteArgument;
		public TerminalNode UNQUOTED() { return getToken(CallGrammarParser.UNQUOTED, 0); }
		public ArgumentContext argument() {
			return getRuleContext(ArgumentContext.class,0);
		}
		public Single_quoteContext single_quote() {
			return getRuleContext(Single_quoteContext.class,0);
		}
		public Double_quoteContext double_quote() {
			return getRuleContext(Double_quoteContext.class,0);
		}
		public Back_quoteContext back_quote() {
			return getRuleContext(Back_quoteContext.class,0);
		}
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallGrammarVisitor ) return ((CallGrammarVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_argument);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case UNQUOTED:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				((ArgumentContext)_localctx).unquotedArgument = match(UNQUOTED);
				setState(84);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(83);
					argument();
					}
					break;
				}
				}
				break;
			case SINGLEQUOTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				((ArgumentContext)_localctx).singleQuoteArgument = single_quote();
				setState(88);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(87);
					argument();
					}
					break;
				}
				}
				break;
			case DOUBLEQUOTE:
				enterOuterAlt(_localctx, 3);
				{
				setState(90);
				((ArgumentContext)_localctx).doubleQuoteArgument = double_quote();
				setState(92);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(91);
					argument();
					}
					break;
				}
				}
				break;
			case BACKQUOTE:
				enterOuterAlt(_localctx, 4);
				{
				setState(94);
				((ArgumentContext)_localctx).backQuoteArgument = back_quote();
				setState(96);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
				case 1:
					{
					setState(95);
					argument();
					}
					break;
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Single_quoteContext extends ParserRuleContext {
		public Token contents;
		public List<TerminalNode> SINGLEQUOTE() { return getTokens(CallGrammarParser.SINGLEQUOTE); }
		public TerminalNode SINGLEQUOTE(int i) {
			return getToken(CallGrammarParser.SINGLEQUOTE, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(CallGrammarParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(CallGrammarParser.WHITESPACE, i);
		}
		public List<TerminalNode> UNQUOTED() { return getTokens(CallGrammarParser.UNQUOTED); }
		public TerminalNode UNQUOTED(int i) {
			return getToken(CallGrammarParser.UNQUOTED, i);
		}
		public List<TerminalNode> PIPE() { return getTokens(CallGrammarParser.PIPE); }
		public TerminalNode PIPE(int i) {
			return getToken(CallGrammarParser.PIPE, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(CallGrammarParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(CallGrammarParser.SEMICOLON, i);
		}
		public List<TerminalNode> INPUTREDIRECTION() { return getTokens(CallGrammarParser.INPUTREDIRECTION); }
		public TerminalNode INPUTREDIRECTION(int i) {
			return getToken(CallGrammarParser.INPUTREDIRECTION, i);
		}
		public List<TerminalNode> OUTPUTREDIRECTION() { return getTokens(CallGrammarParser.OUTPUTREDIRECTION); }
		public TerminalNode OUTPUTREDIRECTION(int i) {
			return getToken(CallGrammarParser.OUTPUTREDIRECTION, i);
		}
		public List<TerminalNode> DOUBLEQUOTE() { return getTokens(CallGrammarParser.DOUBLEQUOTE); }
		public TerminalNode DOUBLEQUOTE(int i) {
			return getToken(CallGrammarParser.DOUBLEQUOTE, i);
		}
		public List<TerminalNode> BACKQUOTE() { return getTokens(CallGrammarParser.BACKQUOTE); }
		public TerminalNode BACKQUOTE(int i) {
			return getToken(CallGrammarParser.BACKQUOTE, i);
		}
		public Single_quoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_single_quote; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallGrammarVisitor ) return ((CallGrammarVisitor<? extends T>)visitor).visitSingle_quote(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Single_quoteContext single_quote() throws RecognitionException {
		Single_quoteContext _localctx = new Single_quoteContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_single_quote);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(SINGLEQUOTE);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHITESPACE) | (1L << UNQUOTED) | (1L << PIPE) | (1L << SEMICOLON) | (1L << INPUTREDIRECTION) | (1L << OUTPUTREDIRECTION) | (1L << DOUBLEQUOTE) | (1L << BACKQUOTE))) != 0)) {
				{
				{
				setState(101);
				((Single_quoteContext)_localctx).contents = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHITESPACE) | (1L << UNQUOTED) | (1L << PIPE) | (1L << SEMICOLON) | (1L << INPUTREDIRECTION) | (1L << OUTPUTREDIRECTION) | (1L << DOUBLEQUOTE) | (1L << BACKQUOTE))) != 0)) ) {
					((Single_quoteContext)_localctx).contents = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(SINGLEQUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Double_quoteContext extends ParserRuleContext {
		public List<TerminalNode> DOUBLEQUOTE() { return getTokens(CallGrammarParser.DOUBLEQUOTE); }
		public TerminalNode DOUBLEQUOTE(int i) {
			return getToken(CallGrammarParser.DOUBLEQUOTE, i);
		}
		public Double_quote_optionsContext double_quote_options() {
			return getRuleContext(Double_quote_optionsContext.class,0);
		}
		public Double_quoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_double_quote; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallGrammarVisitor ) return ((CallGrammarVisitor<? extends T>)visitor).visitDouble_quote(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Double_quoteContext double_quote() throws RecognitionException {
		Double_quoteContext _localctx = new Double_quoteContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_double_quote);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(DOUBLEQUOTE);
			setState(110);
			double_quote_options();
			setState(111);
			match(DOUBLEQUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Double_quote_optionsContext extends ParserRuleContext {
		public Token contents;
		public Double_quote_optionsContext double_quote_options() {
			return getRuleContext(Double_quote_optionsContext.class,0);
		}
		public TerminalNode WHITESPACE() { return getToken(CallGrammarParser.WHITESPACE, 0); }
		public TerminalNode UNQUOTED() { return getToken(CallGrammarParser.UNQUOTED, 0); }
		public TerminalNode PIPE() { return getToken(CallGrammarParser.PIPE, 0); }
		public TerminalNode SEMICOLON() { return getToken(CallGrammarParser.SEMICOLON, 0); }
		public TerminalNode INPUTREDIRECTION() { return getToken(CallGrammarParser.INPUTREDIRECTION, 0); }
		public TerminalNode SINGLEQUOTE() { return getToken(CallGrammarParser.SINGLEQUOTE, 0); }
		public Back_quoteContext back_quote() {
			return getRuleContext(Back_quoteContext.class,0);
		}
		public Double_quote_optionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_double_quote_options; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallGrammarVisitor ) return ((CallGrammarVisitor<? extends T>)visitor).visitDouble_quote_options(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Double_quote_optionsContext double_quote_options() throws RecognitionException {
		Double_quote_optionsContext _localctx = new Double_quote_optionsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_double_quote_options);
		int _la;
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case WHITESPACE:
			case UNQUOTED:
			case PIPE:
			case SEMICOLON:
			case INPUTREDIRECTION:
			case SINGLEQUOTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				((Double_quote_optionsContext)_localctx).contents = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHITESPACE) | (1L << UNQUOTED) | (1L << PIPE) | (1L << SEMICOLON) | (1L << INPUTREDIRECTION) | (1L << SINGLEQUOTE))) != 0)) ) {
					((Double_quote_optionsContext)_localctx).contents = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(114);
				double_quote_options();
				}
				break;
			case BACKQUOTE:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				back_quote();
				setState(116);
				double_quote_options();
				}
				break;
			case DOUBLEQUOTE:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Back_quoteContext extends ParserRuleContext {
		public Token contents;
		public List<TerminalNode> BACKQUOTE() { return getTokens(CallGrammarParser.BACKQUOTE); }
		public TerminalNode BACKQUOTE(int i) {
			return getToken(CallGrammarParser.BACKQUOTE, i);
		}
		public List<TerminalNode> WHITESPACE() { return getTokens(CallGrammarParser.WHITESPACE); }
		public TerminalNode WHITESPACE(int i) {
			return getToken(CallGrammarParser.WHITESPACE, i);
		}
		public List<TerminalNode> UNQUOTED() { return getTokens(CallGrammarParser.UNQUOTED); }
		public TerminalNode UNQUOTED(int i) {
			return getToken(CallGrammarParser.UNQUOTED, i);
		}
		public List<TerminalNode> PIPE() { return getTokens(CallGrammarParser.PIPE); }
		public TerminalNode PIPE(int i) {
			return getToken(CallGrammarParser.PIPE, i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(CallGrammarParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(CallGrammarParser.SEMICOLON, i);
		}
		public List<TerminalNode> INPUTREDIRECTION() { return getTokens(CallGrammarParser.INPUTREDIRECTION); }
		public TerminalNode INPUTREDIRECTION(int i) {
			return getToken(CallGrammarParser.INPUTREDIRECTION, i);
		}
		public List<TerminalNode> OUTPUTREDIRECTION() { return getTokens(CallGrammarParser.OUTPUTREDIRECTION); }
		public TerminalNode OUTPUTREDIRECTION(int i) {
			return getToken(CallGrammarParser.OUTPUTREDIRECTION, i);
		}
		public List<TerminalNode> SINGLEQUOTE() { return getTokens(CallGrammarParser.SINGLEQUOTE); }
		public TerminalNode SINGLEQUOTE(int i) {
			return getToken(CallGrammarParser.SINGLEQUOTE, i);
		}
		public List<TerminalNode> DOUBLEQUOTE() { return getTokens(CallGrammarParser.DOUBLEQUOTE); }
		public TerminalNode DOUBLEQUOTE(int i) {
			return getToken(CallGrammarParser.DOUBLEQUOTE, i);
		}
		public Back_quoteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_back_quote; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CallGrammarVisitor ) return ((CallGrammarVisitor<? extends T>)visitor).visitBack_quote(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Back_quoteContext back_quote() throws RecognitionException {
		Back_quoteContext _localctx = new Back_quoteContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_back_quote);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(BACKQUOTE);
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHITESPACE) | (1L << UNQUOTED) | (1L << PIPE) | (1L << SEMICOLON) | (1L << INPUTREDIRECTION) | (1L << OUTPUTREDIRECTION) | (1L << SINGLEQUOTE) | (1L << DOUBLEQUOTE))) != 0)) {
				{
				{
				setState(122);
				((Back_quoteContext)_localctx).contents = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WHITESPACE) | (1L << UNQUOTED) | (1L << PIPE) | (1L << SEMICOLON) | (1L << INPUTREDIRECTION) | (1L << OUTPUTREDIRECTION) | (1L << SINGLEQUOTE) | (1L << DOUBLEQUOTE))) != 0)) ) {
					((Back_quoteContext)_localctx).contents = (Token)_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(128);
			match(BACKQUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 3:
			return call_type_sempred((Call_typeContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean call_type_sempred(Call_typeContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0:
			return precpred(_ctx, 1);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}